Changed BASE_URL to Generic Const in 'index.js'
