# APIGOLANGMAP/main.go
@@ -55,8 +55,8 @@ func main() {
 		follower.GET("/", routes.GetAllFollowers)
 		follower.GET("/following", routes.GetAllFollowingUsers)
 		follower.POST("/history", routes.GetFollowerLocationsHistory)
-		follower.POST("/assoc", routes.AssociateFollower)
-		follower.POST("/deassoc", routes.DeassociateFollower)
+		follower.POST("/", routes.AssociateFollower)
+		follower.DELETE("/", routes.DeassociateFollower)
 	}
 
 	alertTime := router.Group("/api/v1/alert")
